Update app.js and index.html -  creating "about-us" subpage (unfinished)

--- a/project-pizzeria/src/index.html
+++ b/project-pizzeria/src/index.html
@@ -7,6 +7,7 @@
   <title>Pizzeria</title>
   <link href="https://fonts.googleapis.com/css?family=Lato:400,300i,700%7COswald:300,500,700&amp;subset=latin-ext" rel="stylesheet">
   <link href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
   <link rel="stylesheet" href="vendor/range-slider.min.css">
   <link rel="stylesheet" href="css/style.css">
@@ -21,6 +22,7 @@
           <h2 class="logo__subtitle">the best homemade Italian food</h2>
         </div>
         <div class="main-nav">
+          <a href="#about-us">About us</a>
           <a href="#order">Order</a>
           <a href="#booking">Booking</a>
         </div>
@@ -61,6 +63,76 @@
     </div>
   </header>
   <div id="pages">
+    <section id="about-us">
+      <div class="about-us-wrapper container">
+          <div class="content-images">
+            <a href="#/order" class="image-button" id="order">
+              <h3>Order online</h3>
+              <span>delicious food delivered to your door</span>
+            </a>
+            <a href="#/booking" class="image-button" id="booking">
+              <h3>book a table</h3>
+              <span>and have a seat among us</span>
+            </a>
+          </div>
+          <div class="opening-hours">
+            <h3>Opening hours:</h3>
+            <h2>TUE-SUN, 12PM - 12 AM</h2>
+          </div>
+      </div>
+      <div class="containerMain">
+        <div class="container" id="carousel">
+          <div class="my-slider">
+            <div class="carousel-frame container">
+              <div class="container1">
+                <div class="image element">
+                  <img src="../../../images/assets/pizza-3.jpg" alt="" class="img1 col">
+                </div>
+                <div class="description element">
+                  <h2>The best pizza in the City!</h2>
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum quod vel deleniti impedit nobis magni
+                  voluptatem culpa.
+                </div>
+              </div>
+            </div>
+            <div class="carousel-frame container">
+              <div class="container1">
+                <div class="image element">
+                  <img src="../../../images/assets/pizza-3.jpg" alt="" class="img1 col">
+                </div>
+                <div class="description element">
+                  <h2>Delicious!</h2>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam eius illo assumenda aut sint blanditiis.
+                </div>
+              </div>
+            </div>
+            <div class="carousel-frame container">
+              <div class="container1">
+                <div class="image element">
+                  <img src="../../../images/assets/pizza-3.jpg" alt="" class="img1 col">
+                </div>
+                <div class="description element">
+                  <h2>Nice place...</h2>
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure, quis. Dolorum dolores debitis consectetur natus possimus vitae dicta inventore deleniti.
+                </div>
+              </div>
+            </div>
+            <div class="carousel-frame container">
+              <div class="container1">
+                <div class="image element">
+                  <img src="../../../images/assets/pizza-3.jpg" alt="" class="img1 col">
+                </div>
+                <div class="description element">
+                  <h2>Pizza was tasty</h2>
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum quod vel deleniti impedit nobis magni
+                  voluptatem culpa. Qui odio iusto at dignissimos reprehenderit ipsum nam quisquam possimus sed ipsa. Dicta.
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <section id="order">
       <div id="product-list" class="product-list container"></div>
     </section>
@@ -239,8 +311,8 @@
       </form>
     </div>
   </script>
-
   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.0/handlebars.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
   <script src="vendor/range-slider.min.js"></script>
   <script src="js/app.js" type="module"></script>
