Add gallery in about-us subpage and adjust responsiveness

--- a/project-pizzeria/src/index.html
+++ b/project-pizzeria/src/index.html
@@ -85,51 +85,86 @@
           <div class="my-slider">
             <div class="carousel-frame container">
               <div class="container1">
-                <div class="image element">
-                  <img src="../../../images/assets/pizza-3.jpg" alt="" class="img1 col">
+                <div class="image element">                
                 </div>
                 <div class="description element">
                   <h2>The best pizza in the City!</h2>
                   Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum quod vel deleniti impedit nobis magni
                   voluptatem culpa.
+                  <span>~ Michael Amott</span>
                 </div>
               </div>
             </div>
             <div class="carousel-frame container">
               <div class="container1">
                 <div class="image element">
-                  <img src="../../../images/assets/pizza-3.jpg" alt="" class="img1 col">
                 </div>
                 <div class="description element">
                   <h2>Delicious!</h2>
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam eius illo assumenda aut sint blanditiis.
+                  <span>~ Mick Jagger</span>
                 </div>
               </div>
             </div>
             <div class="carousel-frame container">
               <div class="container1">
                 <div class="image element">
-                  <img src="../../../images/assets/pizza-3.jpg" alt="" class="img1 col">
                 </div>
                 <div class="description element">
                   <h2>Nice place...</h2>
                   Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure, quis. Dolorum dolores debitis consectetur natus possimus vitae dicta inventore deleniti.
+                  <span>~ Scarlett Johannson</span>
                 </div>
               </div>
             </div>
             <div class="carousel-frame container">
               <div class="container1">
                 <div class="image element">
-                  <img src="../../../images/assets/pizza-3.jpg" alt="" class="img1 col">
                 </div>
                 <div class="description element">
                   <h2>Pizza was tasty</h2>
                   Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum quod vel deleniti impedit nobis magni
-                  voluptatem culpa. Qui odio iusto at dignissimos reprehenderit ipsum nam quisquam possimus sed ipsa. Dicta.
+                  voluptatem culpa.
+                  <span>~ Michael Clarke</span>
                 </div>
               </div>
             </div>
           </div>
+        </div>
+        <div class="gallery container">
+          <div class="gallery-wrapper">
+            <div class="row">
+              <div class="img-wrapper left image4">
+                <i class="fas fa-heart"></i>
+                <i class="fas fa-share-alt"></i>
+              </div>
+              <div class="img-wrapper right image5">
+                <i class="fas fa-heart"></i>
+                <i class="fas fa-share-alt"></i>
+              </div>
+            </div>
+            <div class="row">
+              <div class="img-wrapper left image6">
+                <i class="fas fa-heart"></i>
+                <i class="fas fa-share-alt"></i>
+              </div>
+              <div class="img-wrapper right image7">
+                <i class="fas fa-heart"></i>
+                <i class="fas fa-share-alt"></i>
+              </div>
+            </div>
+            <div class="last-row">
+              <div class="img-wrapper left image8">
+                <i class="fas fa-heart"></i>
+                <i class="fas fa-share-alt"></i>
+              </div>
+              <div class="img-wrapper right image9">
+                <i class="fas fa-heart"></i>
+                <i class="fas fa-share-alt"></i>
+              </div>
+            </div>
+          </div>
+          <a href="#" class="gallery-link">View more on instagram</a>
         </div>
       </div>
     </section>
